--- a/FaithConnect/Views/Home/GroupDetail.cshtml
+++ b/FaithConnect/Views/Home/GroupDetail.cshtml
@@ -17,9 +17,6 @@
         var images = userInfo.Image.ToList();
         profileImage = string.IsNullOrEmpty(images.FirstOrDefault()?.imageFile) ? Url.Content("~/UploadedFiles/default.png") : Url.Content("~/UploadedFiles/" + images.FirstOrDefault()?.imageFile);
         userName = userInfo.first_name + " " + userInfo.last_name;
-
-
-
     }
 
     ViewBag.Title = Model.Group.groupName;
@@ -29,12 +26,17 @@
 }
 
 <link rel="stylesheet" href="~/Assets/Groups/css/GroupDetail.css" />
+<link href="~/Assets/signup/css/style.css" rel="stylesheet">
+<link href="~/Assets/signup/css/style2.css" rel="stylesheet">
+
+
+
 
 <div class="container-fluid mt-4">
-    <div class="row">
+    <div class="row" style="position:sticky; top:4.6%;">
         <div class="col-12">
             <!-- Group Banner Section -->
-            <div class="group-header" style="position: relative;">
+            <div class="group-header" >
                 <img src="~/Assets/Groups/img/group1.jpg" alt="Group Header" class="img-fluid group-banner">
                 <div class="group-info" style="position: absolute; bottom: 30px; left: 30px;">
                     <h2>@Model.Group.groupName</h2>
@@ -72,58 +74,113 @@
         </div>
     </div>
 
-    <div class="group-navigation">
+    <div class="group-navigation" style="position:sticky; top:37%;">
         <ul>
             <li><a href="#" class="nav-link" data-target="contents">Contents</a></li>
             <li><a href="#" class="nav-link" data-target="events">Events</a></li>
             <li><a href="#" class="nav-link" data-target="forums">Forums</a></li>
-            <li><a href="#" class="nav-link" data-target="manage">Member Management</a></li>
-
+            @if (Model.Group.groupAdmin == currentUserId)
+            {
+                <li><a href="#" class="nav-link" data-target="manage">Member Management</a></li>
+            }
         </ul>
     </div>
 
     
     <div class="tab-content">
-        <div id="contents" class="tab-pane">
-            <h2>Group Contents</h2>
-            <p>This is the content section for the group.</p>
-            <div class="newsfeed">
-                @for (int i = 0; i <= 100; i++)
-                {
-                    <div class="post">
-
-                        <div class="post-header">
-                            <img src="path/to/unknown-group-icon.png" alt="Group Icon" class="group-icon">
-                            <div class="group-info">
-                                <div class="group-name">Unknown Group</div>
-                                <div class="post-time">1 min ago</div>
+        <div id="contents" class="tab-pane container pt--5" style="margin-top:3%;">           
+            <div class="row" style="flex-wrap:nowrap">
+                <div class="col-md-8">
+                    @if (Model.Group.groupAdmin == currentUserId)
+                    {
+                        <div class="post col-md-20">
+                            <div class="post-interact">
+                                <img src="@profileImage" alt="Avatar" class="user-icon" style="width: 45px; height: 45px; object-fit: cover">
+                                <input data-toggle="modal" data-target="#createPostModal" type="text" placeholder="Post Something" class="comment-input">
                             </div>
-                            <div class="post-options">
-                                <button class="options-button">...</button>
-                                <div class="options-menu">
-                                    <a href="#">Hide Post</a>
-                                    <a href="#">Save post</a>
+                            <div class="post-actions">
+                                <button data-toggle="modal" data-target="#createPostModal" class="action-button"><span class="input-icon-addon"><i class="fas fa-calendar"></i></span> Create Event</button>
+                                <button data-toggle="modal" data-target="#createPostModal" class="action-button"><span class="input-icon-addon"><i class="fas fa-video"></i></span> Photo/Video</button>
+                            </div>
+                        </div>
+                    }
+                    
+                    @foreach (var item in groupView.PostManage.Where(item => item.groupId == currentGroupId && item.status == 0))
+                    {
+                        <div class="post col-md-20">
+
+                            <div class="post-header">
+                                @{ 
+                                    var user = groupView.UserInformations.FirstOrDefault(u => u.userId == item.createdBy);
+                                    string profilePicture = user != null && user.Image != null && user.Image.Any()
+                                                        ? Url.Content("~/UploadedFiles/" + user.Image.FirstOrDefault()?.imageFile)
+                                                        : Url.Content("~/UploadedFiles/default.png"); // Fallback to default profile picture
+                                    string fullName = user != null ? $"{user.first_name} {user.last_name}" : "Unknown";
+                                }
+                                <img src="@profilePicture" alt="Group Icon" class="group-icon">
+                                <div class="group-info">
+
+                                    <div class="group-name" style="color:#000000ad; text-shadow:1px 1px 3px rgb(255 255 255 / 0%);">                                  
+                                        @fullName
+                                    </div>
+                                    <div class="post-time"style="text-shadow:1px 1px 3px rgb(255 255 255 / 0%);">Admin</div>
+                                </div>
+                                <div class="post-options">
+                                    <button class="options-button">...</button>
+                                    <div class="options-menu">
+                                        <a href="#">Hide Post</a>
+                                        <a href="#">Save post</a>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="post-content">
+                                <p>@item.content</p>
+                            </div>
+                            <div class="post-actions">
+                                <button class="action-button" onclick="toggleLike(this)"><span class="input-icon-addon"><i class="far fa-heart"></i></span> Like</button>
+                                <button class="action-button"><span class="input-icon-addon"><i class="fas fa-comment-alt"></i></span> Interact</button>
+                                <button class="action-button"><span class="input-icon-addon"><i class="fas fa-retweet"></i></span> Repost</button>
+                            </div>
+                            <div class="post-interact">
+                                <img src="@profileImage" alt="Avatar" class="user-icon" style="width: 45px; height: 45px; object-fit: cover">
+                                <input type="text" placeholder="Interact as @User.Identity.Name" class="comment-input">
+                            </div>
                         </div>
-                        <div class="post-content">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Accusamus minima delectus nemo unde quae recusandae assumenda</p>
+                    }
+                </div>
+                <div class="col-lg-4">
+                    <div class="events-container bg-white p-4 shadow-sm border-rad20" style="position:sticky; top:45%;">
+                        <div class="event-buttons">
+                            <button id="upcomingEventsBtn" class="event-button active">Upcoming Events</button>
+                            <button id="recentEventsBtn" class="event-button">Recent Events</button>
                         </div>
-                        <div class="post-actions">
-                            <button class="action-button" onclick="toggleLike(this)"><span class="input-icon-addon"><i class="far fa-heart"></i></span> Like</button>
-                            <button class="action-button"><span class="input-icon-addon"><i class="fas fa-comment-alt"></i></span> Interact</button>
-                            <button class="action-button"><span class="input-icon-addon"><i class="fas fa-retweet"></i></span> Repost</button>
+                        <div id="upcomingEvents">
+                            @foreach (var events in groupView.Events.Where(g => g.groupId == currentGroupId && g.status == 0).OrderByDescending(g => g.event_date))
+                            {
+                                <div class="event-item mb-3 p-3 bg-light rounded d-flex" data-date="2024-07-12">
+                                    <div class="event-date me-3 text-center">
+                                        <div class="event-day mb-1">
+                                            @(events.event_date.HasValue ? events.event_date.Value.ToString("dd") : "N/A")
+                                        </div>
+                                        <div class="event-time">@(events.event_date.HasValue ? events.event_date.Value.ToString("hh:mm tt") : "N/A")</div>
+                                    </div>
+                                    <div class="event-details">
+                                        <div class="event-day-of-week mb-1">@events.event_date.Value.ToString("dddd")</div>
+                                        <div class="event-title mb-1">@events.title</div>
+                                        <div class="event-description">@events.description</div>
+                                    </div>
+                                </div>
+                            }
                         </div>
-                        <div class="post-interact">
-                            <img src="@profileImage" alt="Avatar" class="user-icon" style="width: 45px; height: 45px; object-fit: cover">
-                            <input type="text" placeholder="Interact as @User.Identity.Name" class="comment-input">
+                        <div id="recentEvents" class="d-none">
+                            <!-- Recent events will be populated similarly to upcoming events -->
                         </div>
                     </div>
-                }
-            </div>
-
-            
+                </div>
+            </div> 
         </div>
+
+
         @if (currentUserId == Model.Group.groupAdmin)
         {
             <div class="tab-pane container mt-3" id="events">
@@ -136,39 +193,22 @@
                                 <button id="recentEventsBtn" class="event-button">Recent Events</button>
                             </div>
                             <div id="upcomingEvents">
-                                <div class="event-item mb-3 p-3 bg-light rounded d-flex" data-date="2024-07-12">
-                                    <div class="event-date me-3 text-center">
-                                        <div class="event-day mb-1">12</div>
-                                        <div class="event-time">00:00 PM</div>
+                                @foreach (var events in groupView.Events.Where(g => g.groupId == currentGroupId && g.status == 0).OrderByDescending(g => g.event_date))
+                                {
+                                    <div class="event-item mb-3 p-3 bg-light rounded d-flex" data-date="2024-07-12">
+                                        <div class="event-date me-3 text-center">
+                                            <div class="event-day mb-1">
+                                                @(events.event_date.HasValue ? events.event_date.Value.ToString("dd") : "N/A")
+                                            </div>                                            
+                                            <div class="event-time">@(events.event_date.HasValue ? events.event_date.Value.ToString("hh:mm tt") : "N/A")</div>
+                                        </div>
+                                        <div class="event-details">
+                                            <div class="event-day-of-week mb-1">@events.event_date.Value.ToString("dddd")</div>
+                                            <div class="event-title mb-1">@events.title</div>
+                                            <div class="event-description">@events.description</div>
+                                        </div>
                                     </div>
-                                    <div class="event-details">
-                                        <div class="event-day-of-week mb-1">Thursday</div>
-                                        <div class="event-title mb-1">Prayer Meeting</div>
-                                        <div class="event-description">Prayer Meeting with Jesus</div>
-                                    </div>
-                                </div>
-                                <div class="event-item mb-3 p-3 bg-light rounded d-flex" data-date="2024-07-13">
-                                    <div class="event-date me-3 text-center">
-                                        <div class="event-day mb-1">13</div>
-                                        <div class="event-time">00:00 PM</div>
-                                    </div>
-                                    <div class="event-details">
-                                        <div class="event-day-of-week mb-1">Tuesday</div>
-                                        <div class="event-title mb-1">Prayer Meeting</div>
-                                        <div class="event-description">Prayer Meeting with Jesus</div>
-                                    </div>
-                                </div>
-                                <div class="event-item mb-3 p-3 bg-light rounded d-flex" data-date="2024-07-27">
-                                    <div class="event-date me-3 text-center">
-                                        <div class="event-day mb-1">27</div>
-                                        <div class="event-time">00:00 PM</div>
-                                    </div>
-                                    <div class="event-details">
-                                        <div class="event-day-of-week mb-1">Friday</div>
-                                        <div class="event-title mb-1">Prayer Meeting</div>
-                                        <div class="event-description">Prayer Meeting with Jesus</div>
-                                    </div>
-                                </div>
+                                }
                             </div>
                             <div id="recentEvents" class="d-none">
                                 <!-- Recent events will be populated similarly to upcoming events -->
@@ -366,10 +406,48 @@
             </div>
 </div>
 
+<div class="modal fade" id="createPostModal" tabindex="-1" role="dialog" aria-labelledby="createPostModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            @using (Html.BeginForm("Post", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                <div class="modal-header">
+                    <h5 class="modal-title" id="createPostModal">Create Post</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="border:0px; background-color:#00000000">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                    <div class="modal-body">
+
+
+                        <div class="post-header">
+                            <img src="@profileImage" alt="Avatar" class="user-icon" style="width: 45px; height: 45px; object-fit: cover">
+                            <div class="group-info">
+                                <div class="group-name" style="color:black; text-shadow:1px 1px 3px rgb(255 255 255 / 0%);">@User.Identity.Name</div>
+                            </div>
+                        </div>
+                        <div class="post-content">
+                            <input name="content" type="text" placeholder="Post Something" style="padding:10px 10px 50% 10px; width:100%; border:0px; border-radius:10px;">
+                        </div>
+                        <input type="hidden" name="groupId" value="@currentGroupId" />
+                        <input type="hidden" name="createdBy" value="@currentUserId" />                      
+                    </div>
+                    <div class="modal-footer">
+                        <input type="submit" class="btn" value="Post" style="background-color:#cdbb9c; width:100%;" />
+                    </div>
+            }
+
+        </div>
+    </div>
+</div>
+
+
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJTY5KVphtPhzWj9WO1clHTMGaEkaGQ2J95JCzy/8p3ylzTEi" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-pjaaA8dDz/UmAGHEmpNMI0HHLmV7xI5a2zVzt95Z5CjoFQ7p1rR/YL2cw6K9/6Nf" crossorigin="anonymous"></script>
 <script src="~/Assets/Groups/js/groupdetail.js"></script>
+
 <script>
     $(document).ready(function () {
         if ($.fn.DataTable) {
@@ -405,6 +483,7 @@
             }
         }
 </script>
+
 <script src="~/Assets/Admin/js/core/jquery-3.7.1.min.js"></script>
 <script src="~/Assets/Admin/js/core/popper.min.js"></script>
 <script src="~/Assets/Admin/js/core/bootstrap.min.js"></script>
@@ -428,3 +507,5 @@
 <script src="~/Assets/Admin/js/plugin/select2/select2.full.min.js"></script>
 <script src="~/Assets/Admin/js/plugin/sortable/sortable.min.js"></script>
 <script src="~/Assets/Admin/js/plugin/sweetalert/sweetalert.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
